--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ nav.fa{
     margin: auto;
     text-align: center;
     padding-top: 50px;
+    text-decoration: none;
 }
 .projects h1{
     font-size: 40px;
@@ -117,6 +118,7 @@ nav.fa{
     padding-top: 7px;
     padding-bottom: 18px;
     color: black;
+    text-decoration: none;
 }
 .row{
     margin-top: 3%;
@@ -146,6 +148,7 @@ nav.fa{
     font-size: 20px;
     margin: 10px 0;
     color: black;
+    text-decoration: none;
 }
 .project-col:hover{
     box-shadow:0 0 20px 0px rgba(0,0,0,0.2);
