added projects button

--- a/public/style.css
+++ b/public/style.css
@@ -195,13 +195,22 @@ nav .fa{
     }
 }
 
+/*----- The line -----*/
+.line{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 40px;
+    text-decoration: none;
+}
+
 /*----- About me -----*/
 
 .about{
     width: 60%;
     margin: auto;
     text-align: center;
-    padding: 30px 0;
+    padding: 0px 0;
 }
 
 .about h2{
