--- a/public/projectstyle.css
+++ b/public/projectstyle.css
@@ -57,7 +57,8 @@ nav{
     text-align: center;
 }
 .text-box h1{
-    font-size: 65px;
+    font-size: 55px;
+    padding-top: 40px;
 }
 .text-box #one{
     margin: 10px 0 2px;
@@ -103,5 +104,76 @@ nav .fa{
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
+    }
+}
+
+/*-----projects-----*/
+
+.projects{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 20px;
+    text-decoration: none;
+}
+.projects h1{
+    font-size: 40px;
+    font-weight: 600;
+    color: black;
+}
+.projects p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    padding-bottom: 3px;
+    color: black;
+    text-decoration: none;
+}
+.projects p2{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+    padding-top: 3px;
+    padding-bottom: 18px;
+    color: black;
+    text-decoration: none;
+}
+.row{
+    margin-top: 3%;
+    display: flex;
+    justify-content: space-between;
+}
+.project-col{
+    flex-basis: 32%;
+    background: #C7FEFB;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.3s;
+    position: relative;
+    overflow: hidden;
+    text-decoration: none;
+}
+.project-col img{
+    width: 80%;
+    height:70%;
+    padding-bottom: 10px;
+}
+.project-col h3{
+    text-align: center;
+    font-weight: 600;
+    font-size: 20px;
+    margin: 10px 0;
+    color: black;
+    text-decoration: none;
+}
+.project-col:hover{
+    box-shadow:0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+@media(max-width: 1000px){
+    .row{
+        flex-direction: column;
     }
 }
